dig-src/main/default/objects/Contact/fields/Current_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Membership_Level__c</fullName>
    <label>Current Membership Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>