dig-src/main/default/objects/Contact/fields/DIG_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>DIG_Email_Opt_In__c</fullName>
    <label>DIG Email Opt In</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>