dig-src/main/default/objects/Contact/fields/DIG_Organization__c.field-meta.xml
<CustomField>
    <fullName>DIG_Organization__c</fullName>
    <label>DIG Organization</label>
    <type>Text</type>
    <length>255</length>
</CustomField>