dig-src/main/default/objects/Contact/fields/Is_Current_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Member</label>
    <type>Checkbox</type>
</CustomField>