dig-src/main/default/objects/Contact/fields/Membership_Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Last_Paid_Date__c</fullName>
    <label>Membership Last Paid Date</label>
    <type>Date</type>
</CustomField>