dig-src/main/default/objects/Contact/fields/Membership_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status_Summary__c</fullName>
    <label>Membership Status Summary</label>
    <length>20</length>
    <type>Text</type>
</CustomField>